--- a/src/pages/Main.scss
+++ b/src/pages/Main.scss
@@ -11,6 +11,7 @@
     }
     --background: var(--ion-color-light);
     --border-radius: 20px;
+    margin: 4px;
     height: 40px;
     width: 40px;
 }
